try again - missing %endif

--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -44,9 +44,8 @@ BuildRequires: /bin/ksh bison m4 flex swig tk tcl >= 8.3 freetype-devel >= 2
 
 #-- Red Hat Enterprise Linux (also Centos) specific Build Requirements --------------------
 %if 0%{?rhel}
-%if %rhel == 4
-BuildRequires: xorg-x11-devel
 %if %rhel >= 4
+BuildRequires: xorg-x11-devel
 BuildRequires: fontconfig-devel
 %define TCL 1
 BuildRequires: tcl-devel tk-devel 
@@ -61,7 +60,7 @@ BuildRequires: python python-devel
 %define IPSEPCOLA 1
 %endif
 %if %rhel >= 5
-BuildRequires: xorg-x11-devel libXaw-devel libSM-devel libICE-devel libXpm-devel libXt-devel libXmu-devel libXext-devel libX11-devel
+BuildRequires: libXaw-devel libSM-devel libICE-devel libXpm-devel libXt-devel libXmu-devel libXext-devel libX11-devel
 BuildRequires: libtool-ltdl libtool-ltdl-devel
 %define JAVA 1
 BuildRequires: java-devel
