--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -44,8 +44,10 @@ BuildRequires: /bin/ksh bison m4 flex swig tk tcl >= 8.3 freetype-devel >= 2
 
 #-- Red Hat Enterprise Linux (also Centos) specific Build Requirements --------------------
 %if 0%{?rhel}
-%if %rhel >= 4
+%if %rhel == 4
 BuildRequires: xorg-x11-devel
+%endif
+%if %rhel >= 4
 BuildRequires: fontconfig-devel
 %define TCL 1
 BuildRequires: tcl-devel tk-devel 
