--- a/lib/dotgen2/Makefile.am
+++ b/lib/dotgen2/Makefile.am
@@ -20,6 +20,6 @@ noinst_HEADERS = dot2.h dot2procs.h groups.h minc.h
 noinst_LTLIBRARIES = libdotgen2_C.la
 
 libdotgen2_C_la_LDFLAGS = -no-undefined
-libdotgen2_C_la_SOURCES = dotinit.c level.c minc2.c ns.c groups.c minc_utils.c
+libdotgen2_C_la_SOURCES = dotinit.c level.c minc2.c ns.c groups.c minc_utils.c decomp.c
 
 EXTRA_DIST = dotgen2.vcproj
