full screen support for WIN32 (mac doesnt support , linux behaviour is unknown)

--- a/cmd/smyrna/smyrna.vcproj
+++ b/cmd/smyrna/smyrna.vcproj
@@ -377,6 +377,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\glutrender.c"
+				>
+			</File>
+			<File
 				RelativePath=".\gui\gui.c"
 				>
 			</File>
