overall project files and preprocessor directive changes changes required for ortho

--- a/lib/dotgen/gvdotgen.vcproj
+++ b/lib/dotgen/gvdotgen.vcproj
@@ -223,6 +223,14 @@
 			<File
 				RelativePath=".\mincross.c"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						GeneratePreprocessedFile="0"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\position.c"
