--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -30,8 +30,9 @@ Prefix: /usr
 # All features are off (undefined) by default
 # To enable, use: <percent>define FEATURE 1
 # Available features are:
-#    SHARP GHOSTSCRIPT GUILE _IO JAVA LUA OCAML PERL PHP PYTHON RUBY R_LANG
-#    TCL IPSEPCOLA MYLIBGD PANGOCAIRO RSVG GLITZ SMYRNA DEVIL MING GDK_PIXBUF
+#    SHARP GHOSTSCRIPT GUILE _IO JAVA LUA OCAML ORTHO PERL PHP
+#    PYTHON RUBY R_LANG TCL IPSEPCOLA MYLIBGD PANGOCAIRO RSVG
+#    GLITZ SMYRNA DEVIL MING GDK_PIXBUF
 
 # SuSE uses a different mechanism to generate BuildRequires
 # norootforbuild
@@ -60,6 +61,7 @@ BuildRequires: guile-devel
 %define PYTHON 1
 BuildRequires: python python-devel
 %define IPSEPCOLA 1
+%define ORTHO 1
 %endif
 %if %rhel >= 5
 BuildRequires: libXaw-devel libSM-devel libICE-devel libXpm-devel libXt-devel libXmu-devel libXext-devel libX11-devel
@@ -128,6 +130,7 @@ BuildRequires: gts-devel
 BuildRequires: lasi-devel
 %define GDK_PIXBUF 1
 %define IPSEPCOLA 1
+%define ORTHO 1
 %define R_LANG 1
 BuildRequires: R-devel swig >= 1.3.33 perl-libs
 %define SMYRNA 1
