Install man pages

--- a/lib/pack/Makefile.am
+++ b/lib/pack/Makefile.am
@@ -24,8 +24,8 @@ endif
 
 pkginclude_HEADERS = pack.h
 noinst_LTLIBRARIES = libpack_C.la
-#man_MANS = pack.3
-#pdf_DATA = pack.3.pdf
+man_MANS = pack.3
+pdf_DATA = pack.3.pdf
 #pkgconfig_DATA = libpack.pc
 
 libpack_C_la_SOURCES = ccomps.c pack.c
@@ -33,8 +33,8 @@ libpack_C_la_SOURCES = ccomps.c pack.c
 pack.3.pdf: $(srcdir)/pack.3
 	- @GROFF@ -Tps -man $(srcdir)/pack.3 | @PS2PDF@ - - >pack.3.pdf
 
-#EXTRA_DIST = $(man_MANS) $(pdf_DATA) Makefile.old ptest.c
+EXTRA_DIST = $(man_MANS) $(pdf_DATA) Makefile.old
 
-#DISTCLEANFILES = $(pdf_DATA)
+DISTCLEANFILES = $(pdf_DATA)
 
 EXTRA_DIST = pack.3 Makefile.old ptest.c
