Update patchwork code incorporating Yifan's treemap function.

--- a/lib/patchwork/Makefile.am
+++ b/lib/patchwork/Makefile.am
@@ -19,9 +19,9 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/$(GRAPH) \
 	-I$(top_srcdir)/lib/cdt
 
-noinst_HEADERS = patchwork.h
+noinst_HEADERS = patchwork.h tree_map.h
 noinst_LTLIBRARIES = libpatchwork_C.la
 
-libpatchwork_C_la_SOURCES = patchwork.c patchworkinit.c
+libpatchwork_C_la_SOURCES = patchwork.c patchworkinit.c tree_map.c
 
 EXTRA_DIST = Makefile.old gvpatchwork.vcproj
