--- a/graphs/undirected/Makefile.am
+++ b/graphs/undirected/Makefile.am
@@ -11,8 +11,10 @@ EXTRA_DIST = $(GRAPHS)
 
 CLEANFILES = core *.gv.* *.png .xvpics/* 
 
+DOT = $(top_builddir)/cmd/dot/dot_builtins
+
 test:
-	$(top_builddir)/cmd/dot/dot -Kneato \
+	$(DOT) -Kneato \
 		-Tcanon -Tgv -Tplain -Tplain-ext -Txdot \
 		-Tcmap -Tcmapx -Tismap -Timap \
 		-Tjpg -Tpdf -Tfig -Tgif -Tpng \
@@ -20,156 +22,122 @@ test:
 		-Tsvg -Tsvg:cairo -Tsvgz -Tvrml \
 		-O $(GRAPHS) 
 
-#	for i in $(GRAPHS); do \
-#		echo "neato $$i"; \
-#		$(top_builddir)/cmd/dot/dot -Kneato \
-#			-Tcanon -o$$i.canon \
-#			-Tcmap -o$$i.cmap \
-#			-Tcmapx -o$$i.cmapx \
-#			-Tdia -o$$i.dia \
-#			-Tgv -o$$i.gv \
-#			-Tfig -o$$i.fig \
-#			-Tgd -o$$i.gd \
-#			-Tgd2 -o$$i.gd2 \
-#			-Tgif -o$$i.gif \
-#			-Thpgl -o$$i.hpgl \
-#			-Tismap -o$$i.ismap \
-#			-Timap -o$$i.imap \
-#			-Tjpg -o$$i.jpg \
-#			-Tmif -o$$i.mif \
-#			-Tmp -o$$i.mp \
-#			-Tpcl -o$$i.pcl \
-#			-Tpic -o$$i.pic \
-#			-Tplain -o$$i.plain \
-#			-Tplain-ext -o$$i.plain-ext \
-#			-Tpng -o$$i.png \
-#			-Tps -o$$i.ps \
-#			-Tps2 -o$$i.ps2 \
-#			-Tsvg -o$$i.svg \
-#			-Tsvgz -o$$i.svgz \
-#			-Twbmp -o$$i.wbmp \
-#			-Tvrml -o$$i.vrml \
-#			-Tvtx -o$$i.vtx \
-#			-Txdot -o$$i.xdot \
-#				$(top_srcdir)/graphs/undirected/$$i; \
-#	done
-
 canon:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tcanon -o$$i.canon $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tcanon -o$$i.canon $(top_srcdir)/graphs/undirected/$$i; done
 
 cmap:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tcmap -o$$i.cmap $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tcmap -o$$i.cmap $(top_srcdir)/graphs/undirected/$$i; done
 
 cmapx:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tcmapx -o$$i.cmapx $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tcmapx -o$$i.cmapx $(top_srcdir)/graphs/undirected/$$i; done
 
 dia:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tdia -o$$i.dia $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tdia -o$$i.dia $(top_srcdir)/graphs/undirected/$$i; done
 
 fig:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tfig -o$$i.fig $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tfig -o$$i.fig $(top_srcdir)/graphs/undirected/$$i; done
 
 gd:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tgd -o$$i.gd $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tgd -o$$i.gd $(top_srcdir)/graphs/undirected/$$i; done
 
 gd2:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tgd2 -o$$i.gd2 $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tgd2 -o$$i.gd2 $(top_srcdir)/graphs/undirected/$$i; done
 
 gif:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tgif -o$$i.gif $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tgif -o$$i.gif $(top_srcdir)/graphs/undirected/$$i; done
 
 gv dot:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tgv -o$$i.gv $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tgv -o$$i.gv $(top_srcdir)/graphs/undirected/$$i; done
 
 hpgl:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Thpgl -o$$i.hpgl $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Thpgl -o$$i.hpgl $(top_srcdir)/graphs/undirected/$$i; done
 
 ismap:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tismap -o$$i.ismap $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tismap -o$$i.ismap $(top_srcdir)/graphs/undirected/$$i; done
 
 imap:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Timap -o$$i.imap $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Timap -o$$i.imap $(top_srcdir)/graphs/undirected/$$i; done
 
 jpg:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tjpg -o$$i.jpg $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tjpg -o$$i.jpg $(top_srcdir)/graphs/undirected/$$i; done
 
 mif:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tmif -o$$i.mif $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tmif -o$$i.mif $(top_srcdir)/graphs/undirected/$$i; done
 
 mp:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tmp -o$$i.mp $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tmp -o$$i.mp $(top_srcdir)/graphs/undirected/$$i; done
 
 pcl:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tpcl -o$$i.pcl $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tpcl -o$$i.pcl $(top_srcdir)/graphs/undirected/$$i; done
 
 pic:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tpic -o$$i.pic $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tpic -o$$i.pic $(top_srcdir)/graphs/undirected/$$i; done
 
 plain:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tplain -o$$i.plain $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tplain -o$$i.plain $(top_srcdir)/graphs/undirected/$$i; done
 
 plain-ext:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tplain-ext -o$$i.plain-ext $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tplain-ext -o$$i.plain-ext $(top_srcdir)/graphs/undirected/$$i; done
 
 png:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tpng -o$$i.png $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tpng -o$$i.png $(top_srcdir)/graphs/undirected/$$i; done
 
 ps:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tps -o$$i.ps $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tps -o$$i.ps $(top_srcdir)/graphs/undirected/$$i; done
 
 ps_cairo:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tps:cairo -o$$i.cairo.ps $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tps:cairo -o$$i.cairo.ps $(top_srcdir)/graphs/undirected/$$i; done
 
 ps_lasi:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tps:lasi -o$$i.lasi.ps $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tps:lasi -o$$i.lasi.ps $(top_srcdir)/graphs/undirected/$$i; done
 
 ps2:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tps2 -o$$i.ps2 $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tps2 -o$$i.ps2 $(top_srcdir)/graphs/undirected/$$i; done
 
 svg:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tsvg -o$$i.svg $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tsvg -o$$i.svg $(top_srcdir)/graphs/undirected/$$i; done
 
 svgz:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tsvgz -o$$i.svgz $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tsvgz -o$$i.svgz $(top_srcdir)/graphs/undirected/$$i; done
 
 wbmp:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Twbmp -o$$i.wbmp $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Twbmp -o$$i.wbmp $(top_srcdir)/graphs/undirected/$$i; done
 
 vrml:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tvrml -o$$i.vrml $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tvrml -o$$i.vrml $(top_srcdir)/graphs/undirected/$$i; done
 
 vtx:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Tvtx -o$$i.vtx $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Tvtx -o$$i.vtx $(top_srcdir)/graphs/undirected/$$i; done
 
 xdot:
 	for i in $(GRAPHS); do echo "neato $$i"; \
-		$(top_builddir)/cmd/dot/dot -Kneato -Txdot -o$$i.xdot $(top_srcdir)/graphs/undirected/$$i; done
+		$(DOT) -Kneato -Txdot -o$$i.xdot $(top_srcdir)/graphs/undirected/$$i; done
