make gv.2python.pdf generation more reliable

--- a/tclpkg/gv/Makefile.am
+++ b/tclpkg/gv/Makefile.am
@@ -328,8 +328,8 @@ DEVTSTS += test_php
 endif
 if WITH_PYTHON
 pkgpython_DATA = $(PYTHON_data)
-py_mans ?= gv.3python
-py_data ?= gv.3python.pdf
+man_MANS += gv.3python
+pdf_DATA += gv.3python.pdf
 pkgpython_LTLIBRARIES = libgv_python.la
 DEVTSTS += test_python
 endif
